// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > github-issue-priming-claude-frontmatter 1`] = `
{
  "description": "Primes a GitHub issue into a research-backed implementation workflow with isolated worktree and brainstorming. Use when starting work on a GitHub issue — triggers on issue numbers, issue URLs, or phrases like "start issue", "work on issue", "prime issue".",
  "model": "claude-opus-4-7",
  "name": "github-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > github-issue-priming-codex-frontmatter 1`] = `
{
  "description": "Primes a GitHub issue into a research-backed implementation workflow with isolated worktree and brainstorming. Use when starting work on a GitHub issue — triggers on issue numbers, issue URLs, or phrases like "start issue", "work on issue", "prime issue".",
  "license": "MIT",
  "metadata": {
    "short-description": "Prime a GitHub issue into a research-backed implementation workflow",
  },
  "name": "github-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > github-issue-priming-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#24292f",
    "display_name": "GitHub Issue Priming",
    "short_description": "Research and stage a GitHub issue for implementation",
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > issue-priming-workflow-claude-frontmatter 1`] = `
{
  "description": "Continues a normalized issue-priming workflow into design and implementation readiness, with optional autonomous execution to a reviewable PR. Use when \`linear-issue-priming\` or \`github-issue-priming\` hands off a normalized issue payload. Do not use when starting from a raw Linear identifier or GitHub issue number — invoke the entrypoint instead.",
  "model": "claude-opus-4-7",
  "name": "issue-priming-workflow",
  "user-invocable": false,
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > issue-priming-workflow-sidecar 1`] = `
{
  "policy": {
    "allow_implicit_invocation": false,
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > linear-issue-priming-claude-frontmatter 1`] = `
{
  "description": "Primes a Linear issue into a research-backed implementation workflow with isolated worktree and brainstorming. Use when starting work on a Linear issue — triggers on Linear identifiers (ENG-123), Linear URLs, or phrases like "start issue", "work on issue", "prime issue".",
  "model": "claude-opus-4-7",
  "name": "linear-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > linear-issue-priming-codex-frontmatter 1`] = `
{
  "description": "Primes a Linear issue into a research-backed implementation workflow with isolated worktree and brainstorming. Use when starting work on a Linear issue — triggers on Linear identifiers (ENG-123), Linear URLs, or phrases like "start issue", "work on issue", "prime issue".",
  "license": "MIT",
  "metadata": {
    "short-description": "Prime a Linear issue into a research-backed implementation workflow",
  },
  "name": "linear-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > linear-issue-priming-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#5e6ad2",
    "display_name": "Linear Issue Priming",
    "short_description": "Research and stage a Linear issue for implementation",
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > play-review-sidecar 1`] = `
{
  "policy": {
    "allow_implicit_invocation": false,
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > play-validate-review-artifacts-sidecar 1`] = `
{
  "policy": {
    "allow_implicit_invocation": false,
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > pr-review-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#0969da",
    "display_name": "PR Review",
    "short_description": "Run a multi-agent review of a GitHub pull request",
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > report-devcanon-issue-codex-frontmatter 1`] = `
{
  "description": "Drafts an upstream DevCanon issue for a reusable shared-skill or shared-agent need surfaced from a consumer repo. Use when a reusable shared skill or shared agent problem is discovered in a consumer repository, or for requests for new shared skills or shared agents whose need is reusable across repositories.",
  "license": "MIT",
  "metadata": {
    "short-description": "Draft an upstream shared-work issue for DevCanon from a consumer repository",
  },
  "name": "report-devcanon-issue",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > report-devcanon-issue-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#0f766e",
    "display_name": "Report Shared Issue",
    "icon_large": "./assets/codex-skill-icon-large.png",
    "icon_small": "./assets/codex-skill-icon-small.png",
    "short_description": "Draft and post reusable shared-work issues to DevCanon",
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > subagent-lifecycle-sidecar 1`] = `
{
  "policy": {
    "allow_implicit_invocation": false,
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > write-linear-project-update-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#5e6ad2",
    "default_prompt": "Use $write-linear-project-update to draft a Linear project update from evidence in dry-run mode.",
    "display_name": "Write Linear Project Update",
    "short_description": "Write Linear project updates from evidence",
  },
}
`;
